--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,5 @@
 
 .content-area {
   background-color: #E1E6E0;
-  padding-top: 20px;
+  padding-top: 30px;
 }
